<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="15dip"
	android:orientation="horizontal">
	<LinearLayout
	android:orientation="vertical"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_gravity="center"
	android:paddingLeft="20dip"
	android:paddingRight="20dip">
	<TextView
	android:text="@string/editar"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_gravity="center"
	android:layout_marginBottom="20dip"
	android:textSize="24.5sp" />
	<TableLayout
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_gravity="center"
	android:stretchColumns="*">
	<TableRow>
	<TextView
	android:id="@+id/frase_text"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/agregar_frase_frase"
	android:layout_x="18px"
	android:layout_y="24px">
	</TextView>
	<LinearLayout>
	<EditText
	android:id="@+id/frase_input"
	android:layout_width="150px"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:layout_x="18px"
	android:layout_y="56px">
	</EditText>
	</LinearLayout>
	</TableRow>
	<TableRow>
	<TextView
	android:id="@+id/autor_text"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/agregar_frase_autor"
	android:layout_x="22px"
	android:layout_y="123px">
	</TextView>
	<LinearLayout>
	<EditText
	android:id="@+id/autor_input"
	android:layout_width="150px"
	android:layout_height="wrap_content"
	android:textSize="18sp"
	android:layout_x="22px"
	android:layout_y="152px">
	</EditText>
	</LinearLayout>
	</TableRow>
	</TableLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_gravity="center">
	<Button
	android:id="@+id/guardar_button"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent" android:text="@string/ok">
	</Button>
	<Button
	android:id="@+id/cancelar_editar"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"
	android:text="@string/cancelar">
	</Button>
	</LinearLayout>
	</LinearLayout>
</LinearLayout>