<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		style="@style/TitleBar">
		<include layout="@layout/action_bar" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1" android:padding="6dip">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">

			<Button style="@style/HomeButton" android:text="@string/frase_dia_label"
				android:drawableTop="@drawable/frase_diaria_button_selector"
				android:id="@+id/frase_dia_button" />
			<Button android:id="@+id/agregar_button" style="@style/HomeButton"
				android:text="@string/agregar" android:drawableTop="@drawable/agregar_button_selector" />
		</LinearLayout>

		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1">
			<Button android:id="@+id/ver_todo_button" style="@style/HomeButton"
				android:text="@string/ver_todos" android:drawableTop="@drawable/list_button_selector" />
			<Button style="@style/HomeButton" android:text="@string/salir"
				android:drawableTop="@drawable/exit_button_selector" android:id="@+id/exit_button" />
		</LinearLayout>
		<LinearLayout android:id="@+id/button_root"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical">
			<View android:background="#ffffff" android:layout_width="fill_parent" android:layout_height="1dip" android:layout_centerVertical="true" android:id="@+id/line"/>
			<LinearLayout android:layout_height="wrap_content"
				android:id="@+id/button"
				android:orientation="horizontal" android:layout_width="wrap_content">
				<ImageView android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:id="@+id/button_image"
					android:src="@drawable/ic_developer"></ImageView>
				<LinearLayout android:id="@+id/button_text"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:orientation="vertical">
					<TextView android:id="@+id/textView1"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:textColor="@color/autor_text" android:text="@string/app_name"></TextView>
					<TextView android:id="@+id/textView2"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:text="@string/button_description"></TextView>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
