<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/TitleBar" android:background="@color/autor_text">
    <ImageView style="@style/TitleBarLogo"
    	android:id="@+id/title_logo"
        android:contentDescription="@string/description_logo"
        android:src="@drawable/title_logo"
        android:onClick="onActionBarButtonClick" />

    <View style="@style/TitleBarSpring" />

    <ImageView style="@style/TitleBarSeparator" />
    <ImageButton style="@style/TitleBarAction"
        android:id="@+id/btn_title_refresh"
        android:contentDescription="@string/description_refresh"
        android:src="@drawable/ic_title_refresh"
        android:onClick="onActionBarButtonClick" />
    <ProgressBar style="@style/TitleBarProgressIndicator"
        android:id="@+id/title_refresh_progress"
        android:visibility="gone" />

    <ImageView style="@style/TitleBarSeparator" />
    <ImageButton style="@style/TitleBarAction"
        android:contentDescription="@string/description_search"
        android:src="@drawable/ic_title_search"
        android:onClick="onActionBarButtonClick" android:id="@+id/btn_title_search"/>
</LinearLayout>

